--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
 	<title>To-do List</title>
 
 	<link rel="stylesheet" type="text/css" href="public/css/style.css">
-
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
 
 	<div id="container">
 		<h1>To-do List</h1>
-		<input type="text" name=""></input>
+		<input type="text" name="" placeholder="Add New Todo"></input>
 		<ul>
-			<li> <span>X</span> Todo 1</li>
-			<li> <span>X</span> Todo 2</li>
-			<li> <span>X</span> Todo 3</li>
+			<li> 
+				<span><i class="fa fa-trash" aria-hidden="true"></i>
+				</span> Todo 1
+			</li>
+			<li> 
+				<span><i class="fa fa-trash" aria-hidden="true"></i>
+				</span> Todo 2
+			</li>
+			<li> 
+				<span><i class="fa fa-trash" aria-hidden="true"></i>
+				</span> Todo 3
+			</li>
 		</ul>
 
 
